force-app/main/default/objects/License_Registration__c/fields/License_Revocation_Results__c.field-meta.xml
<CustomField>
    <fullName>License_Revocation_Results__c</fullName>
    <description>Records the results of a license revocation hearing</description>
    <inlineHelpText>Records the results of a license revocation hearing</inlineHelpText>
    <label>License Revocation Results</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Revoke License</fullName>
            </value>
            <value>
                <fullName>Deny License Renewal</fullName>
            </value>
            <value>
                <fullName>Retain License &amp; Renew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>