force-app/main/default/objects/License_Registration__c/fields/LiveScanDA__c.field-meta.xml
<CustomField>
    <fullName>LiveScanDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Live Scan DA</label>
    <type>Checkbox</type>
</CustomField>