force-app/main/default/objects/License_Registration__c/fields/LiveScanReviewed__c.field-meta.xml
<CustomField>
    <fullName>LiveScanReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Live Scan Reviewed?</label>
    <type>Checkbox</type>
</CustomField>