force-app/main/default/objects/License_Registration__c/fields/LocationDocumentationDA__c.field-meta.xml
<CustomField>
    <fullName>LocationDocumentationDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location Documentation DA</label>
    <type>Checkbox</type>
</CustomField>