force-app/main/default/objects/License_Registration__c/fields/LocationDocumentationDocuments__c.field-meta.xml
<CustomField>
    <fullName>LocationDocumentationDocuments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location Documentation Documents</label>
    <type>Checkbox</type>
</CustomField>