force-app/main/default/objects/License_Registration__c/fields/LocationDocumentationReviewed__c.field-meta.xml
<CustomField>
    <fullName>LocationDocumentationReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location Documentation Reviewed?</label>
    <type>Checkbox</type>
</CustomField>