force-app/main/default/objects/License_Registration__c/fields/Mailing_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Line_1__c</fullName>
    <label>Mailing Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>