force-app/main/default/objects/License_Registration__c/fields/Mailing_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Line_2__c</fullName>
    <label>Mailing Address Line 2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>