force-app/main/default/objects/License_Registration__c/fields/Mailing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Postal_Code__c</fullName>
    <inlineHelpText>U.S. Zip codes must have 5 digits or 9 digits with a dash between the 5th and 6th digit.</inlineHelpText>
    <label>Mailing Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>