force-app/main/default/objects/License_Registration__c/fields/MinorInformationDA__c.field-meta.xml
<CustomField>
    <fullName>MinorInformationDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Minor Information DA</label>
    <type>Checkbox</type>
</CustomField>