force-app/main/default/objects/License_Registration__c/fields/MinorInformationReviewed__c.field-meta.xml
<CustomField>
    <fullName>MinorInformationReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Minor Information Reviewed?</label>
    <type>Checkbox</type>
</CustomField>