force-app/main/default/objects/License_Registration__c/fields/Minors_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Minors_Birth_Date__c</fullName>
    <description>Used for Entertainment Work Permit view</description>
    <inlineHelpText>Minors Birth Date</inlineHelpText>
    <label>Minors Birth Date</label>
    <summarizedField>Registration_Account__c.Birth_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Registration_Account__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Individual Permit</value>
    </summaryFilterItems>
    <summaryForeignKey>Registration_Account__c.Registration__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>