force-app/main/default/objects/License_Registration__c/fields/Name_of_License_Registration__c.field-meta.xml
<CustomField>
    <fullName>Name_of_License_Registration__c</fullName>
    <description>Name of License/Registration</description>
    <inlineHelpText>Name of License/Registration</inlineHelpText>
    <label>Name of License/Registration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>