force-app/main/default/objects/License_Registration__c/fields/No_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>No_of_Locations__c</fullName>
    <label>No of Locations</label>
    <summaryFilterItems>
        <field>Registration_Location__c.Date_Deactivated__c</field>
        <operation>equals</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>Registration_Location__c.Registration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>