force-app/main/default/objects/License_Registration__c/fields/No_of_Years__c.field-meta.xml
<CustomField>
    <fullName>No_of_Years__c</fullName>
    <formula>IF(ISPICKVAL(Registration_Period_July1__c,&quot;&quot;),
Case( Registration_Period__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
&quot;3&quot;,3,
0),
CASE(Registration_Period_July1__c,
&quot;1&quot;,1,
&quot;2&quot;,2,
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>