force-app/main/default/objects/License_Registration__c/fields/Not_in_good_standing_explanation__c.field-meta.xml
<CustomField>
    <fullName>Not_in_good_standing_explanation__c</fullName>
    <label>Not in good standing explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>