force-app/main/default/objects/License_Registration__c/fields/Number_of_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attachments__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Populated via DLRS</description>
    <label>Number of Attachments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>