force-app/main/default/objects/License_Registration__c/fields/Number_of_Business_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Business_Accounts__c</fullName>
    <description>Used to enforce only one business account for company types that are not joint venture.</description>
    <label>Number of Business Accounts</label>
    <summaryFilterItems>
        <field>Registration_Account__c.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>Management Individual</value>
    </summaryFilterItems>
    <summaryForeignKey>Registration_Account__c.Registration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>