force-app/main/default/objects/License_Registration__c/fields/Number_of_Exams_Required__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Exams_Required__c</fullName>
    <description>dlrs rollup</description>
    <label>Number of Exams Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>