force-app/main/default/objects/License_Registration__c/fields/Number_of_Ownership_Records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Ownership_Records__c</fullName>
    <description>Set by DLRS</description>
    <label>Number of Ownership Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>