force-app/main/default/objects/License_Registration__c/fields/Number_of_Parent_Guardian__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Parent_Guardian__c</fullName>
    <description>Count the number of Parent Guardian.  Used in validation rule -  Registration needs at least 1 minor and 1 parent/guardian</description>
    <label>Number of Parent Guardian</label>
    <summaryFilterItems>
        <field>Registration_Account__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Parent Guardian</value>
    </summaryFilterItems>
    <summaryForeignKey>Registration_Account__c.Registration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>