force-app/main/default/objects/License_Registration__c/fields/Number_of_Partners__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Partners__c</fullName>
    <description>Used to count number of partners added as reg accounts.</description>
    <label>Number of Partners</label>
    <summaryFilterItems>
        <field>Registration_Account__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Partnership</value>
    </summaryFilterItems>
    <summaryForeignKey>Registration_Account__c.Registration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>