force-app/main/default/objects/License_Registration__c/fields/Number_of_Qs_Answered__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Qs_Answered__c</fullName>
    <label>Number of Qs Answered</label>
    <summaryFilterItems>
        <field>Registration_Question__c.Answered__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Registration_Question__c.Registration_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>