force-app/main/default/objects/License_Registration__c/fields/Number_of_Unresolved_Defects__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Unresolved_Defects__c</fullName>
    <description>Populated via DLRS. Used to validate whether a Registration can be approved or not.</description>
    <label>Number of Unresolved Defects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>