force-app/main/default/objects/License_Registration__c/fields/numberOfApplicantManagers__c.field-meta.xml
<CustomField>
    <fullName>numberOfApplicantManagers__c</fullName>
    <label>numberOfApplicantManagers</label>
    <summaryFilterItems>
        <field>Registration_Account__c.I_Am_this_Manager__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>Registration_Account__c.Registration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>