force-app/main/default/objects/License_Registration__c/fields/numberOfApplicantOwners__c.field-meta.xml
<CustomField>
    <fullName>numberOfApplicantOwners__c</fullName>
    <description>Number of Applicants who are Owners</description>
    <label>numberOfApplicantOwners</label>
    <summaryFilterItems>
        <field>Ownership__c.I_am_this_owner__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>Ownership__c.Registration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>