force-app/main/default/objects/License_Registration__c/fields/Operating_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Operating_Engineer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Operating Engineer</label>
    <type>Checkbox</type>
</CustomField>