force-app/main/default/objects/License_Registration__c/fields/Original_Registration__c.field-meta.xml
<CustomField>
    <fullName>Original_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Original Registration</description>
    <inlineHelpText>The Original Registration from which this was renewed.</inlineHelpText>
    <label>Original Registration</label>
    <referenceTo>License_Registration__c</referenceTo>
    <relationshipLabel>Renewals</relationshipLabel>
    <relationshipName>Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>