force-app/main/default/objects/License_Registration__c/fields/Override_Default_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Override_Default_Expiration_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Override the default Expiration Date settings for Entertainment Work Permit.</description>
    <inlineHelpText>Override the default Expiration Date settings for Entertainment Work Permit.</inlineHelpText>
    <label>Override Default Expiration Date</label>
    <type>Checkbox</type>
</CustomField>