force-app/main/default/objects/License_Registration__c/fields/Ownership_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Percentage__c</fullName>
    <label>Ownership Percentage</label>
    <summarizedField>Ownership__c.Ownership_Percentage__c</summarizedField>
    <summaryForeignKey>Ownership__c.Registration__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>