force-app/main/default/objects/License_Registration__c/fields/Painter__c.field-meta.xml
<CustomField>
    <fullName>Painter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Painter</label>
    <type>Checkbox</type>
</CustomField>