force-app/main/default/objects/License_Registration__c/fields/ParentGuardianInformationDA__c.field-meta.xml
<CustomField>
    <fullName>ParentGuardianInformationDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent/Guardian Information DA</label>
    <type>Checkbox</type>
</CustomField>