force-app/main/default/objects/License_Registration__c/fields/ParentGuardianInformationReviewed__c.field-meta.xml
<CustomField>
    <fullName>ParentGuardianInformationReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent/Guardian Information Reviewed?</label>
    <type>Checkbox</type>
</CustomField>