force-app/main/default/objects/License_Registration__c/fields/Parking_Highway_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Parking_Highway_Improvement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Parking/Highway/Improvement</label>
    <type>Checkbox</type>
</CustomField>