force-app/main/default/objects/License_Registration__c/fields/Payment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date_Time__c</fullName>
    <description>Store Payment Date Time for identifying auto-renewal. This field is to be updated by wfr &quot;REG: Capture Payment DateTime&quot;</description>
    <label>Payment Date Time</label>
    <type>DateTime</type>
</CustomField>