force-app/main/default/objects/License_Registration__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>Populated via DLRS from Chargent Order status field.</description>
    <label>Payment Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>