force-app/main/default/objects/License_Registration__c/fields/Penalty_Applied__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Applied__c</fullName>
    <description>public works</description>
    <label>Penalty Applied</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>