force-app/main/default/objects/License_Registration__c/fields/Penalty_Assessed__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Assessed__c</fullName>
    <description>Used to identifty Which penalty was paid for last time</description>
    <label>Penalty Assessed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Penalty 1</fullName>
            </value>
            <value>
                <fullName>Penalty 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>