force-app/main/default/objects/License_Registration__c/fields/Penalty_I__c.field-meta.xml
<CustomField>
    <fullName>Penalty_I__c</fullName>
    <description>Used to handle the 2000 penalty</description>
    <formula>IF(ISPICKVAL(Have_penalties_been_paid_for__c,&quot;No&quot;) &amp;&amp; Not(ISPICKVAL(Was_the_failure_inadvertent__c,&#39;Yes&#39;)),True,False) || 
IF(ISPICKVAL( Lapse_in_Registration_Grace_Period__c, &quot;Yes&quot;)&amp;&amp; Not(ISPICKVAL(Was_the_failure_inadvertent__c,&#39;Yes&#39;)),True,False)</formula>
    <inlineHelpText>2000 Penalty</inlineHelpText>
    <label>Penalty I</label>
    <type>Checkbox</type>
</CustomField>