force-app/main/default/objects/License_Registration__c/fields/Penalty_II__c.field-meta.xml
<CustomField>
    <fullName>Penalty_II__c</fullName>
    <description>Used for penalties of 400 when they are because of Inadvertent failure is true</description>
    <formula>IF( ISPICKVAL(Was_the_failure_inadvertent__c,&#39;Yes&#39;),True,False)</formula>
    <inlineHelpText>400 Penalty</inlineHelpText>
    <label>Penalty II</label>
    <type>Checkbox</type>
</CustomField>