force-app/main/default/objects/License_Registration__c/fields/Penalty_of_Perjury_Statement__c.field-meta.xml
<CustomField>
    <fullName>Penalty_of_Perjury_Statement__c</fullName>
    <formula>&quot;I, &quot;+First_Name__c+&quot; &quot;+Middle_Name__c+&quot; &quot;+Last_Name__c+&quot;, the undersigned, am the &quot;+Title_Company_Position__c+&quot; for &quot;+Legal_Entity_Name__c+&quot;, with the authority to act for, and on behalf of the contractor named in this registration. I certify under penalty of perjury, that all of the information provided is true and correct. I further acknowledge that any untruthful information provided in this application could result in the registration being canceled.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Penalty of Perjury Statement</label>
    <type>Text</type>
</CustomField>