force-app/main/default/objects/License_Registration__c/fields/PenaltyIFee__c.field-meta.xml
<CustomField>
    <fullName>PenaltyIFee__c</fullName>
    <formula>2000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Penalty I Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>