force-app/main/default/objects/License_Registration__c/fields/PenaltyIIFee__c.field-meta.xml
<CustomField>
    <fullName>PenaltyIIFee__c</fullName>
    <formula>400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Penalty II Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>