force-app/main/default/objects/License_Registration__c/fields/PEO_Email__c.field-meta.xml
<CustomField>
    <fullName>PEO_Email__c</fullName>
    <description>Public Works</description>
    <label>PEO Email</label>
    <type>Email</type>
</CustomField>