force-app/main/default/objects/License_Registration__c/fields/PEO_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>PEO_Mailing_State__c</fullName>
    <description>Public Works</description>
    <label>Mailing State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>