force-app/main/default/objects/License_Registration__c/fields/PEO_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>PEO_Mailing_Street__c</fullName>
    <description>Public Works</description>
    <label>Mailing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>