force-app/main/default/objects/License_Registration__c/fields/PEO_Name__c.field-meta.xml
<CustomField>
    <fullName>PEO_Name__c</fullName>
    <description>Public Works</description>
    <label>PEO Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>