force-app/main/default/objects/License_Registration__c/fields/PEO_Phone__c.field-meta.xml
<CustomField>
    <fullName>PEO_Phone__c</fullName>
    <description>Public Works</description>
    <label>PEO Phone</label>
    <type>Phone</type>
</CustomField>