force-app/main/default/objects/License_Registration__c/fields/Permit_Type_Mask__c.field-meta.xml
<CustomField>
    <fullName>Permit_Type_Mask__c</fullName>
    <description>This field is for ewp reg email template (approved sent out license) to add the word &#39;Permit&#39; at the end of &#39;Entertainment Work&quot;</description>
    <formula>CASE( RecordType.DeveloperName 
, &#39;Entertainment_Work_Permit&#39;, &#39;Permit&#39; 
, &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Permit Type Mask</label>
    <type>Text</type>
</CustomField>