force-app/main/default/objects/License_Registration__c/fields/PermitApplicantDA__c.field-meta.xml
<CustomField>
    <fullName>PermitApplicantDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permit Applicant DA</label>
    <type>Checkbox</type>
</CustomField>