force-app/main/default/objects/License_Registration__c/fields/PermitApplicantReviewed__c.field-meta.xml
<CustomField>
    <fullName>PermitApplicantReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permit Applicant Reviewed?</label>
    <type>Checkbox</type>
</CustomField>