force-app/main/default/objects/License_Registration__c/fields/Physical_Business_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Physical_Business_Address_Line_1__c</fullName>
    <inlineHelpText>Please enter your physical business address.  P.O. Box address is not allowed.</inlineHelpText>
    <label>Physical Business Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>