force-app/main/default/objects/License_Registration__c/fields/Physical_Business_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Physical_Business_Address_Line_2__c</fullName>
    <label>Physical Business Address Line 2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>