force-app/main/default/objects/License_Registration__c/fields/Physical_Business_City__c.field-meta.xml
<CustomField>
    <fullName>Physical_Business_City__c</fullName>
    <label>Physical Business City / Province</label>
    <length>100</length>
    <type>Text</type>
</CustomField>