force-app/main/default/objects/License_Registration__c/fields/Physical_Business_County__c.field-meta.xml
<CustomField>
    <fullName>Physical_Business_County__c</fullName>
    <label>Physical Business County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>County</valueSetName>
    </valueSet>
</CustomField>