force-app/main/default/objects/License_Registration__c/fields/Plasterer_Tender__c.field-meta.xml
<CustomField>
    <fullName>Plasterer_Tender__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Plasterer/Tender</label>
    <type>Checkbox</type>
</CustomField>