force-app/main/default/objects/License_Registration__c/fields/Plumber__c.field-meta.xml
<CustomField>
    <fullName>Plumber__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Plumber</label>
    <type>Checkbox</type>
</CustomField>