force-app/main/default/objects/License_Registration__c/fields/Prior_Contractor_Registration__c.field-meta.xml
<CustomField>
    <fullName>Prior_Contractor_Registration__c</fullName>
    <label>Prior Contractor Registration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No, this is my first registration</fullName>
            </value>
            <value>
                <fullName>Yes, I have an existing registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>