force-app/main/default/objects/License_Registration__c/fields/Prior_Contractor_Registration_ID__c.field-meta.xml
<CustomField>
    <fullName>Prior_Contractor_Registration_ID__c</fullName>
    <label>Prior Contractor Registration ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>