force-app/main/default/objects/License_Registration__c/fields/PW_Form_Test_LapseinReg__c.field-meta.xml
<CustomField>
    <fullName>PW_Form_Test_LapseinReg__c</fullName>
    <label>PW Form Test - LapseinReg</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New / Early Renewal</fullName>
            </value>
            <value>
                <fullName>Renewal Grace Period</fullName>
            </value>
            <value>
                <fullName>Renewal After Grace Period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>